--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@
 			<ul>
 				<li><a href="/">Home</a></li>
 				<li><a href="/">About Us</a></li>
-				<li><a href="/">Services</a></li>
-				<li><a href="/">Home</a></li>
-				<li><a href="/">Home</a></li>
-				<li><a href="/">Home</a></li>
+				<li><a href="/">Shop </a></li>
+				<li><a href="/">testimonials</a></li>
+				<li><a href="/">Become a Dealer</a></li>
+			</ul>
+			<ul>
+				<li><a href="/" class="search"><i class="fa-solid fa-magnifying-glass"></i></a></li>
+				<li><a href="/" class="user_icon"><i class="fa-regular fa-user"></i></a></li>
 			</ul>
 		</nav>
 	</header>
@@ -71,14 +74,14 @@
 	</section>
 
 
-	<section>
+	<section class="bg_black">
 		<div class="container">
 			<div class="row">
 				<div class="sec_head">
-					<h2 class="heading">New Product</h2>
+					<h2 class="heading">New Products</h2>
 					<div class="slider_btns">
-						<div class="swiper-button-prev-prod"><img src="images/back.png"> </div>
-						<div class="swiper-button-next-prod"><img src="images/right_arrow.png"></div>
+						<div class="swiper-button-prev-prod"><img src="images/back-golden.png"> </div>
+						<div class="swiper-button-next-prod"><img src="images/right_arrow_golden.png"></div>
 				    </div>
 				</div>
 				<div class="product_main">
@@ -270,14 +273,14 @@
 		</div>
 	</section>	
 
-	<section>
+	<section class="bg_black">
 		<div class="container">
 			<div class="row">
 				<div class="sec_head">
 					<h2 class="heading">Featured Product</h2>
 					<div class="slider_btns">
-						<div class="swiper-button-prev-prod-feat"><img src="images/back.png"> </div>
-						<div class="swiper-button-next-prod-feat"><img src="images/right_arrow.png"></div>
+						<div class="swiper-button-prev-prod-feat"><img src="images/back-golden.png"> </div>
+						<div class="swiper-button-next-prod-feat"><img src="images/right_arrow_golden.png"></div>
 				    </div>
 				</div>
 				<div class="product_main">
@@ -420,7 +423,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="sec_head">
-					<h2 class="heading">New Product</h2>
+					<h2 class="heading">Our Blogs</h2>
 					<div class="slider_btns">
 						<div class="swiper-button-prev-blog"><img src="images/back.png"> </div>
 						<div class="swiper-button-next-blog"><img src="images/right_arrow.png"></div>
@@ -494,6 +497,41 @@
 			</div>
 		</div>
 	</section>
+
+
+
+	<footer>
+		<div class="container">
+			<div class="footer_flex">
+				<div class="footer_fst">
+					<div class="footer_logo">
+						<a href="/"><img src="images/logo.png"></a>
+					</div>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, aut ipsam modi doloremque quam tempore? Dolorem aliquid provident temporibus a neque vel officiis.</p>
+				</div>
+				<div class="footer_scnd">
+					<h3 class="footer_heading">Quick Links</h3>
+					<ul>
+						<li><a href="/">Home</a></li>
+						<li><a href="/">About Us</a></li>
+						<li><a href="/">Shop</a></li>
+						<li><a href="/">Testimonials</a></li>
+						<li><a href="/">Become a Dealer</a></li>
+					</ul>
+				</div>
+				<div class="footer_thrd">
+					<h3 class="footer_heading">Address</h3>
+					<ul>
+						<li><a href="/">Home</a></li>
+						<li><a href="/">About Us</a></li>
+						<li><a href="/">Shop</a></li>
+						<li><a href="/">Testimonials</a></li>
+						<li><a href="/">Become a Dealer</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</footer>
 
 
 
