--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
 				<li><a href="/">Home</a></li>
 				<li><a href="/">About Us</a></li>
 				<li><a href="/">Shop </a></li>
-				<li><a href="/">testimonials</a></li>
+				<!-- <li><a href="/">testimonials</a></li> -->
 				<li><a href="/">Become a Dealer</a></li>
 			</ul>
 			<ul>
 				<li><a href="/" class="search"><i class="fa-solid fa-magnifying-glass"></i></a></li>
+				<li><a href="/" class="cart"><i class="fa-solid fa-cart-shopping"></i></a></li>
 				<li><a href="/" class="user_icon"><i class="fa-regular fa-user"></i></a></li>
 			</ul>
 		</nav>
@@ -56,7 +57,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="sec_head justify-content-center">
-				<h2 class="heading">Check Out: Padlocks and Hardwares</h2>
+				<h2 class="heading">Check Out: <span>Padlocks and Hardwares</span></h2>
 			</div>
 			<div class="col-md-6">
 				<div class="two_imgs">
