--- a/index.html
+++ b/index.html
@@ -57,12 +57,13 @@
 	<div class="container">
 		<div class="row">
 			<div class="sec_head justify-content-center">
-				<h2 class="heading">Check Out: <span>Padlocks and Hardwares</span></h2>
+				<h2 class="heading">Check Out</h2>
 			</div>
 			<div class="col-md-6">
 				<div class="two_imgs">
 					<a href="#">
 						<img src="images/suraksha flipkart 1.jpg">
+						<p>Padlocks</p>
 					</a>
 				</div>
 			</div>
@@ -70,6 +71,7 @@
 				<div class="two_imgs">
 					<a href="#">
 						<img src="images/suraksha flipkart 1.jpg">
+						<p>Hardware</p>
 					</a>
 				</div>
 			</div>
