--- a/index.html
+++ b/index.html
@@ -226,58 +226,22 @@
 	</div>
 </section>
 
-<section class="testimonial">
+
+<section class="bg_call_action p-0">
 	<div class="container">
-		<div class="row">
-			<div class="swiper testi_slider">
-				<div class="swiper-wrapper">
-					<div class="swiper-slide">
-					<div class="testi_box">
-						<a href="#">
-							<div class="test_img">
-								<img src="images/user.jpg">
-							</div>
-							<div class="test_text">
-								<p>"Majority have suffered alteration in aome from, by injected believable.into electronic typesetting, Lorem Ipsum is imply dummy text of the release of Letraset sheetpassage."</p>
-								<h4 class="testi_name">Tony chester</h4>
-							</div>
-						</a>
-					</div>	
-					</div>
-					<div class="swiper-slide">
-					<div class="testi_box">
-						<a href="#">
-							<div class="test_img">
-								<img src="images/user.jpg">
-							</div>
-							<div class="test_text">
-								<p>"Majority have suffered alteration in aome from, by injected believable.into electronic typesetting, Lorem Ipsum is imply dummy text of the release of Letraset sheetpassage."</p>
-								<h4 class="testi_name">Tony chester</h4>
-							</div>
-						</a>
-					</div>	
-					</div>
-					<div class="swiper-slide">
-					<div class="testi_box">
-						<a href="#">
-							<div class="test_img">
-								<img src="images/user.jpg">
-							</div>
-							<div class="test_text">
-								<p>"Majority have suffered alteration in aome from, by injected believable.into electronic typesetting, Lorem Ipsum is imply dummy text of the release of Letraset sheetpassage."</p>
-								<h4 class="testi_name">Tony chester</h4>
-							</div>
-						</a>
-					</div>	
-					</div>
-				</div>
-				<div class="swiper_btns">	
-					<div class="swiper-pagination"></div>
+		<div class="call_action_text">
+			<div class="row">
+				<div class="col-md-1"></div>
+				<div class="col-md-4">
+					<h2>Pocket</h2>
+					<p>Convenient security and hassle-free application</p>
+					<a href="/" class="buy_btn">Buy Know</a>
 				</div>
 			</div>
 		</div>
 	</div>
-</section>	
+</section>
+
 
 <section class="bg_black">
 	<div class="container">
@@ -465,25 +429,7 @@
 
 
 
-
-<section class="bg_call_action p-0">
-	<div class="container">
-		<div class="call_action_text">
-			<div class="row">
-				<div class="col-md-1"></div>
-				<div class="col-md-4">
-					<h2>Pocket</h2>
-					<p>Convenient security and hassle-free application</p>
-					<a href="/" class="buy_btn">Buy Know</a>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-
-
-
-<section>
+<section class="bg_black">
 	<div class="container">
 		<div class="row">
 			<div class="sec_head">
@@ -562,6 +508,61 @@
 	</div>
 </section>
 	
+
+
+
+<section class="testimonial">
+	<div class="container">
+		<div class="row">
+			<div class="swiper testi_slider">
+				<div class="swiper-wrapper">
+					<div class="swiper-slide">
+					<div class="testi_box">
+						<a href="#">
+							<div class="test_img">
+								<img src="images/user.jpg">
+							</div>
+							<div class="test_text">
+								<p>"Majority have suffered alteration in aome from, by injected believable.into electronic typesetting, Lorem Ipsum is imply dummy text of the release of Letraset sheetpassage."</p>
+								<h4 class="testi_name">Tony chester</h4>
+							</div>
+						</a>
+					</div>	
+					</div>
+					<div class="swiper-slide">
+					<div class="testi_box">
+						<a href="#">
+							<div class="test_img">
+								<img src="images/user.jpg">
+							</div>
+							<div class="test_text">
+								<p>"Majority have suffered alteration in aome from, by injected believable.into electronic typesetting, Lorem Ipsum is imply dummy text of the release of Letraset sheetpassage."</p>
+								<h4 class="testi_name">Tony chester</h4>
+							</div>
+						</a>
+					</div>	
+					</div>
+					<div class="swiper-slide">
+					<div class="testi_box">
+						<a href="#">
+							<div class="test_img">
+								<img src="images/user.jpg">
+							</div>
+							<div class="test_text">
+								<p>"Majority have suffered alteration in aome from, by injected believable.into electronic typesetting, Lorem Ipsum is imply dummy text of the release of Letraset sheetpassage."</p>
+								<h4 class="testi_name">Tony chester</h4>
+							</div>
+						</a>
+					</div>	
+					</div>
+				</div>
+				<div class="swiper_btns">	
+					<div class="swiper-pagination"></div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>	
 
 
 
