--- a/index.html
+++ b/index.html
@@ -565,6 +565,20 @@
 </section>	
 
 
+<section class="cta">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-4">
+				<h3 class="text-center">We look forward to your inquiry and cooperation</h3>
+				<p class="text-center">Turke/Russia/UK/France/Germany/America/Brazil/
+					Argentina/South Africa/Iran/India and other 60 countries</p>
+				<a href="/" class="buy_btn">Asking for information</a>
+			</div>
+		</div>
+	</div>
+</section>
+
+
 
 	<footer>
 		<div class="container">
