--- a/products.html
+++ b/products.html
@@ -38,6 +38,11 @@
 
 <div class="inner_banner">
     <img src="images/inner-banner.jpg" alt="">
+    <div class="container">
+	    <div class="banner_text">
+	    	<h2>Our Products</h2>
+	    </div>
+	</div>
 </div>
 
 
@@ -47,9 +52,108 @@
 			<div class="product_flex">
 				<div class="product_left">
 					<h5 class="sidebar_title">Category</h5>
+					<ul>
+						<li><a href="/">Locks</a></li>
+						<li><a href="/">Locks</a></li>
+						<li><a href="/">Locks</a></li>
+						<li><a href="/">Locks</a></li>
+						<li><a href="/">Locks</a></li>
+						<li><a href="/">Locks</a></li>
+						<li><a href="/">Locks</a></li>
+					</ul>
 				</div>
 				<div class="product_right">
-					
+					<div class="product_top">
+						<ul>
+							<li>
+								<p>Pagination By:</p>
+								<select name="cars" id="cars">
+								  <option value="volvo">15</option>
+								  <option value="saab">25</option>
+								  <option value="mercedes">50</option>
+								  <option value="audi">75</option>
+								</select>
+							</li>
+							<li>
+								<p>Sort by: </p>
+								<select name="cars" id="cars">
+								  <option value="volvo">Featued</option>
+								  <option value="saab">Best Selling</option>
+								  <option value="mercedes">Alphabetically, A-Z</option>
+								  <option value="audi">Alphabetically, Z-A</option>
+								</select>
+							</li>
+						</ul>
+					</div>	
+					<div class="product_listing">
+						<ul>
+							<li>
+								<div class="product_box">
+									<a href="/">
+										<div class="product_img">
+											<img src="https://elie.net/static/images/banner/evolution-of-the-https-lock-icon-infographic.jpg" class="frst_img">
+											<img src="images/product_hover.jpg" class="scnd_img">	
+										</div>
+										<div class="product_des">
+											The best is yet to come' Framed poster
+										</div>
+									</a>
+									<div class="price-item">
+										<div class="price"> $150.00</div>
+										<div class="cart_options">
+											<ul>
+												<li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
+												<li><a href="#"><i class="fa-solid fa-heart"></i></a></li>	
+											</ul>
+										</div>
+									</div>
+								</div>
+							</li>
+							<li>
+								<div class="product_box">
+									<a href="/">
+										<div class="product_img">
+											<img src="images/product_hover.jpg" class="main_img">	
+										</div>
+										<div class="product_des">
+											The best is yet to come' Framed poster
+										</div>
+									</a>
+									<div class="price-item">
+										<div class="price"> $150.00</div>
+										<div class="cart_options">
+											<ul>
+												<li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
+												<li><a href="#"><i class="fa-solid fa-heart"></i></a></li>	
+											</ul>
+										</div>
+									</div>
+								</div>
+							</li>
+							<li>
+								<div class="product_box">
+									<a href="/">
+										<div class="product_img">
+											<img src="https://elie.net/static/images/banner/evolution-of-the-https-lock-icon-infographic.jpg" class="frst_img">
+											<img src="images/product_hover.jpg" class="scnd_img">	
+										</div>
+										<div class="product_des">
+											The best is yet to come' Framed poster
+										</div>
+									</a>
+									<div class="price-item">
+										<div class="price"> $150.00</div>
+										<div class="cart_options">
+											<ul>
+												<li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
+												<li><a href="#"><i class="fa-solid fa-heart"></i></a></li>	
+											</ul>
+										</div>
+									</div>
+								</div>
+							</li>
+						</ul>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -99,72 +203,6 @@
 	</div>
 </footer>
 
-  <script>
 
-  	var swiper = new Swiper(".blog_slider", {
-      slidesPerView: 3,
-      spaceBetween: 30,
-      navigation: {
-        nextEl: ".swiper-button-next-blog",
-        prevEl: ".swiper-button-prev-blog",
-      },
-    });
-
-
-	var swiper = new Swiper(".client_slider", {
-      slidesPerView: 5,
-      spaceBetween: 30,
-      navigation: {
-        nextEl: ".swiper-button-next-blog",
-        prevEl: ".swiper-button-prev-blog",
-      },
-    });
-
-
-
-
-  	var swiper = new Swiper(".testi_slider", {
-      slidesPerView: 2,
-      spaceBetween: 30,
-      pagination: {
-        el: ".swiper-pagination",
-        clickable: true,
-      },
-    });
-
-
-
-    var swiper = new Swiper(".featured_product_slider", {
-      slidesPerView: 4,
-      spaceBetween: 30,
-      navigation: {
-        nextEl: ".swiper-button-next-prod-feat",
-        prevEl: ".swiper-button-prev-prod-feat",
-      },
-    });
-
-
-
-
-  	var swiper = new Swiper(".product_slider", {
-      slidesPerView: 4,
-      spaceBetween: 30,
-      navigation: {
-        nextEl: ".swiper-button-next-prod",
-        prevEl: ".swiper-button-prev-prod",
-      },
-    });
-
-
-
-    var swiper = new Swiper(".mySwiper", {
-      slidesPerView: 1,
-      spaceBetween: 30,
-      navigation: {
-        nextEl: ".swiper-button-next",
-        prevEl: ".swiper-button-prev",
-      },
-    });
-  </script>
 </body>
 </html>
