--- a/product-detail.html
+++ b/product-detail.html
@@ -53,11 +53,23 @@
 	<div class="container">
 		<div class="row">
 			<div class="product_detail_main">
-                <div class="product_img">
-                    <img src="images/product_img.jpg" alt="">
+                <div class="product_dtl_img">
+					<div class="product_img_zoom">
+						<img src="images/product_img.jpg" alt="">
+					</div>
                 </div>
-                <div class="product_right">
-                    <h4>Pocket Lock and Keys Door Lock for Home Round 65mm Padlock with 5 Keys and Double Locking 8 Lever gate, Store Shutter Finished in Silver and Brass  Good for a Hostel Apartment Rental                    </h4>
+                <div class="product_dtl_right">
+					<h4 class="heading">Pocket Lock and Keys Door Lock for Home Round 65mm Padlock with 5 Keys</h4>
+                    <p>Pocket Lock and Keys Door Lock for Home Round 65mm Padlock with 5 Keys and Double Locking 8 Lever gate, Store Shutter Finished in Silver and Brass  Good for a Hostel Apartment Rental . Pocket Lock and Keys Door Lock for Home Round 65mm Padlock with 5 Keys and Double Locking 8 Lever gate, Store Shutter Finished in Silver and Brass  Good for a Hostel Apartment Rental Pocket Lock and Keys Door Lock for Home Round 65mm Padlock with 5 Keys and Double Locking 8 Lever gate, Store Shutter Finished in Silver and Brass  Good for a Hostel Apartment Rental Pocket Lock and Keys Door Lock for Home Round 65mm Padlock with 5 Keys and Double Locking 8 Lever gate, Store Shutter Finished in Silver and Brass  Good for a Hostel Apartment Rental</p>
+
+					<div class="btn_flex">
+						<div class="quantity quantity-with-plusminus">
+							<input type="button" value="-" class="minus">
+							<input type="number" id="quantity_654a7156c9d87" class="input-text qty text" step="1" min="1" max="" name="quantity" value="1" title="Qty" placeholder="" inputmode="numeric">
+							<input type="button" value="+" class="plus">
+						</div>
+						<button type="submit" class="cart-btn">Add to cart</button>
+					</div>
                 </div>
             </div>		
 		</div>
