--- a/products.html
+++ b/products.html
@@ -91,7 +91,7 @@
 						<ul>
 							<li>
 								<div class="product_box">
-									<a href="/">
+									<a href="/product-detail.html">
 										<div class="product_img">
 											<img src="https://elie.net/static/images/banner/evolution-of-the-https-lock-icon-infographic.jpg" class="frst_img">
 											<img src="images/product_hover.jpg" class="scnd_img">	
@@ -113,7 +113,7 @@
 							</li>
 							<li>
 								<div class="product_box">
-									<a href="/">
+									<a href="/product-detail.html">
 										<div class="product_img">
 											<img src="images/product_hover.jpg" class="main_img">	
 										</div>
@@ -134,7 +134,7 @@
 							</li>
 							<li>
 								<div class="product_box">
-									<a href="/">
+									<a href="/product-detail.html">
 										<div class="product_img">
 											<img src="https://elie.net/static/images/banner/evolution-of-the-https-lock-icon-infographic.jpg" class="frst_img">
 											<img src="images/product_hover.jpg" class="scnd_img">	
