--- a/become-a-dealer.html
+++ b/become-a-dealer.html
@@ -52,39 +52,52 @@
 <section>
 	<div class="container">
 		<div class="row">
-			<div class="dealer_form">
-				<h2 class="heading mb-4 text-center">Become a dealer</h2>
-				<form>
-					<div class="form-floating mb-3">
-					  <input type="text" class="form-control" id="floatingInput" placeholder="Name">
-					  <label for="floatingInput">Name</label>
-					</div>
-					<div class="form-floating mb-3">
-					  <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-					  <label for="floatingInput">Email address</label>
-					</div>
-					<div class="form-floating mb-3">
-					  <input type="text" class="form-control" id="floatingPassword" placeholder="7894561230">
-					  <label for="floatingPassword">Phone</label>
-					</div>
-					<div class="form-floating mb-3">
-					  <input type="text" class="form-control" id="floatingPassword" placeholder="Address">
-					  <label for="floatingPassword">Address</label>
-					</div>
-					<div class="form-floating">
-					  <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
-					  <label for="floatingTextarea">Comments</label>
-					</div>
-					<div class="text-center">
-						<div class="submit_btn">
-							<button>Submit</button>
-						</div>
-					</div>
-				</form>
-			</div>		
+			<div class="dealer_box">
+				<div class="dealer_left">
+					<h2 class="heading mb-4">Contact Us</h2>
+					<ul class="dealer_contact">
+						<li><i class="fa-solid fa-address-book"></i> <span>Near Shah-Jamal, Gonda Rd, Rorawar, Jalalpur - Aligarh Uttar Pradesh 202001</span></li>
+						<li><i class="fa-solid fa-square-phone"></i><a href="tel:+91 81266 22789">+91 81266 22789</a></li>
+						<li><i class="fa-solid fa-envelope"></i><a href="mailto:affan9130@gmail.com">affan9130@gmail.com</a></li>
+					</ul>
+				</div>
+				<div class="dealer_right">
+					<div class="dealer_form">
+						<h2 class="heading mb-4 text-center">Become a dealer</h2>
+						<form>
+							<div class="form-floating mb-3">
+							<input type="text" class="form-control" id="floatingInput" placeholder="Name">
+							<label for="floatingInput">Name</label>
+							</div>
+							<div class="form-floating mb-3">
+							<input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+							<label for="floatingInput">Email address</label>
+							</div>
+							<div class="form-floating mb-3">
+							<input type="text" class="form-control" id="floatingPassword" placeholder="7894561230">
+							<label for="floatingPassword">Phone</label>
+							</div>
+							<div class="form-floating mb-3">
+							<input type="text" class="form-control" id="floatingPassword" placeholder="Address">
+							<label for="floatingPassword">Address</label>
+							</div>
+							<div class="form-floating">
+							<textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
+							<label for="floatingTextarea">Comments</label>
+							</div>
+							<div class="text-center">
+								<div class="submit_btn">
+									<button>Submit</button>
+								</div>
+							</div>
+						</form>
+					</div>		
+				</div>
+			</div>
 		</div>
 	</div>
 </section>
+
 
 
 <footer>
