--- a/about.html
+++ b/about.html
@@ -32,9 +32,9 @@
 			<li><a href="/">Become a Dealer</a></li>
 		</ul>
 		<ul>
+			<li><a href="/" class="user_icon">Login</a></li>
 			<li><a href="/" class="search"><i class="fa-solid fa-magnifying-glass"></i></a></li>
 			<li><a href="/" class="cart"><i class="fa-solid fa-cart-shopping"></i></a></li>
-			<li><a href="/" class="user_icon"><i class="fa-regular fa-user"></i></a></li>
 		</ul>
 	</nav>
 </header>
